# OpenGL-Starter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: CMakeConfig.h.in
ext/glad/: glad.c  glad.h
src/: CMakeConfig.h  main.cpp
